# rcci-playground

./: .gitignore  README.md  pyproject.toml  pytest.ini  tox.ini
.github/workflows/: pipeline.yml
rcci_playground/: __main__.py
rcci_playground/modeller/: modeller.py
rcci_playground/scraper/: scraper.py
tests/: test_modeller.py  test_scraper.py
